fix: In release mode no images are visible

--- a/src/TrueOrFalse.Frontend.Web/Style/font-awesome.css
+++ b/src/TrueOrFalse.Frontend.Web/Style/font-awesome.css
@@ -6,11 +6,11 @@
  * -------------------------- */
 @font-face {
   font-family: 'FontAwesome';
-  src: url('fonts-awesome/fontawesome-webfont.eot?v=4.0.3');
-  src: url('fonts-awesome/fontawesome-webfont.eot?#iefix&v=4.0.3') format('embedded-opentype'),
-       url('fonts-awesome/fontawesome-webfont.woff?v=4.0.3') format('woff'),
-       url('fonts-awesome/fontawesome-webfont.ttf?v=4.0.3') format('truetype'),
-       url('fonts-awesome/fontawesome-webfont.svg?v=4.0.3#fontawesomeregular') format('svg');
+  src: url('/style/fonts-awesome/fontawesome-webfont.eot?v=4.0.3');
+  src: url('/style/fonts-awesome/fontawesome-webfont.eot?#iefix&v=4.0.3') format('embedded-opentype'),
+       url('/style/fonts-awesome/fontawesome-webfont.woff?v=4.0.3') format('woff'),
+       url('/style/fonts-awesome/fontawesome-webfont.ttf?v=4.0.3') format('truetype'),
+       url('/style/fonts-awesome/fontawesome-webfont.svg?v=4.0.3#fontawesomeregular') format('svg');
   font-weight: normal;
   font-style: normal;
 }
